# muslim

./: .gitignore  ANSWER.md  Cargo.toml  PUBLISHING.md  QUICKSTART.md  README.md  WORKFLOW.md
scripts/: bump-version.sh  install-local.sh  promote-to-stable.sh
src/: config.rs  main.rs  prayer.rs
