[package]
name = "muslim"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Hamza Zubair <hamzamohdzubair.com>"]
description = "A CLI tool for managing Islamic prayer times"
license = "MIT"
repository = "https://github.com/hamzamohdzubair/muslim"
homepage = "https://github.com/hamzamohdzubair/muslim"
keywords = ["prayer", "islamic", "salah", "muslim", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
